logs/bm-common.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bm_common'...
Compiling './lib/python3.5/site-packages/bm_common/decorators.py'...
***   File "./lib/python3.5/site-packages/bm_common/decorators.py", line 8
    print '%s took %0.3f ms' % (func.func_name, (t2-t1)*1000.0)
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bm_common/list.py'...
***   File "./lib/python3.5/site-packages/bm_common/list.py", line 62
    print "\t" * level, item
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bm_common/maths'...
Compiling './lib/python3.5/site-packages/bm_common/maths/deterministic_random.py'...
***   File "./lib/python3.5/site-packages/bm_common/maths/deterministic_random.py", line 45
    i = _hasher(`x`)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bm_common/maths/gaussian.py'...
***   File "./lib/python3.5/site-packages/bm_common/maths/gaussian.py", line 14
    x2 = deterministicrandom.deterministicrandom(`x` + "-x2")
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bm_common/retry.py'...
***   File "./lib/python3.5/site-packages/bm_common/retry.py", line 28
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bm_common/version.py'...
***   File "./lib/python3.5/site-packages/bm_common/version.py", line 87
    raise TypeError, '"%s" is not a valid form specifier.' % form
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bm_common-0.0.1b0.egg-info'...
Listing './lib/python3.5/site-packages/common'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
